--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,342 @@
-certifi==2026.1.4
-charset-normalizer==3.4.4
-fasttext==0.9.3
-filelock==3.20.3
-fsspec==2026.1.0
-hf-xet==1.2.0
-huggingface-hub==0.36.0
-idna==3.11
-Jinja2==3.1.6
-joblib==1.5.3
-MarkupSafe==3.0.3
-mpmath==1.3.0
-networkx==3.4.2
-numpy==2.2.6
-packaging==25.0
-pandas==2.3.3
-pybind11==3.0.1
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.3
-regex==2026.1.15
-requests==2.32.5
-rustworkx==0.17.1
-safetensors==0.7.0
-scikit-learn==1.7.2
-scipy==1.15.3
-sentencepiece==0.2.1
-six==1.17.0
-sympy==1.14.0
-threadpoolctl==3.6.0
-tokenizers==0.22.2
-torch==2.2.2
-tqdm==4.67.1
-transformers==4.57.6
-typing_extensions==4.15.0
-tzdata==2025.3
-urllib3==2.6.3
-xgboost==3.1.3
-warcio
-boto3
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_openmp_mutex=4.5=7_kmp_llvm
+_python_abi3_support=1.0=hd8ed1ab_2
+aiohappyeyeballs=2.6.1=pypi_0
+aiohttp=3.13.3=pypi_0
+aiosignal=1.4.0=pypi_0
+alsa-lib=1.2.15.3=hb03c661_0
+aom=3.9.1=hac33072_0
+arrow-cpp=19.0.0=h16717c6_5
+async-timeout=5.0.1=pypi_0
+attr=2.5.2=h39aace5_0
+attrs=25.4.0=pypi_0
+aws-c-auth=0.9.0=hb25bd0a_2
+aws-c-cal=0.9.2=h3ff94e8_1
+aws-c-common=0.12.4=hb25bd0a_0
+aws-c-compression=0.3.1=hb25bd0a_2
+aws-c-event-stream=0.5.6=hb25bd0a_0
+aws-c-http=0.10.4=hb25bd0a_0
+aws-c-io=0.21.4=h3eb0749_0
+aws-c-mqtt=0.13.3=hb25bd0a_0
+aws-c-s3=0.8.7=h3ff94e8_0
+aws-c-sdkutils=0.2.4=hb25bd0a_1
+aws-checksums=0.2.7=hb25bd0a_1
+aws-crt-cpp=0.34.0=h7934f7d_0
+aws-sdk-cpp=1.11.638=hac3f51a_0
+backports.zstd=1.3.0=py310h69bd2ac_0
+beautifulsoup4=4.14.3=py310h06a4308_0
+bertopic=0.17.4=pyhcf101f3_0
+blas=1.0=mkl
+brotli=1.0.9=h5eee18b_9
+brotli-bin=1.0.9=h5eee18b_9
+brotli-python=1.0.9=py310h6a678d5_9
+brotlicffi=1.0.9.2=py310h6a678d5_1
+bzip2=1.0.8=h5eee18b_6
+c-ares=1.34.5=hef5626c_0
+ca-certificates=2026.1.4=hbd8a1cb_0
+cairo=1.18.4=h44eff21_0
+certifi=2026.01.04=py310h06a4308_0
+cffi=1.17.1=py310h1fdaa30_1
+charset-normalizer=3.4.4=py310h06a4308_0
+contourpy=1.3.2=py310h3788b33_0
+cpuonly=2.0=0
+cpython=3.10.19=py310hd8ed1ab_3
+cudatoolkit=11.8.0=h6a678d5_0
+cycler=0.12.1=py310h06a4308_0
+cyrus-sasl=2.1.28=h1110e0f_3
+dav1d=1.2.1=h5eee18b_0
+dbus=1.16.2=h5bd4931_0
+double-conversion=3.4.0=hecca717_0
+expat=2.7.1=h6a678d5_0
+ffmpeg=4.0=hcdf2ecd_0
+filelock=3.20.3=py310h06a4308_0
+fmt=12.1.0=hff5e90c_0
+font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=h8b1ccd4_0
+fontconfig=2.14.1=h55d465d_3
+fonts-anaconda=1=h8fa9717_0
+fonts-conda-ecosystem=1=hd3eb1b0_0
+fonts-conda-forge=1=hc364b38_1
+fonttools=4.61.1=py310h3406613_0
+freetype=2.14.1=ha770c72_0
+fribidi=1.0.16=hb03c661_0
+frozenlist=1.8.0=pypi_0
+fsspec=2026.2.0=pyhd8ed1ab_0
+future=1.0.0=py310h06a4308_0
+gdk-pixbuf=2.42.10=h64b468e_2
+gflags=2.2.2=h6a678d5_1
+giflib=5.2.2=h5eee18b_0
+glib=2.84.2=h6a678d5_0
+glib-tools=2.84.2=h6a678d5_0
+glog=0.5.0=h6a678d5_1
+glslang=16.2.0=h96af755_1
+gmp=6.3.0=h6a678d5_0
+gmpy2=2.2.1=py310h5eee18b_0
+graphite2=1.3.14=h295c915_1
+h2=4.3.0=py310h06a4308_0
+harfbuzz=10.2.0=hdfddeaa_1
+hdbscan=0.8.41=py310hf779ad0_0
+hf-xet=1.2.1=py310hb823017_0
+hpack=4.1.0=py310h06a4308_0
+huggingface_hub=0.36.0=pyhd8ed1ab_0
+hyperframe=6.1.0=py310h06a4308_0
+icu=73.1=h6a678d5_0
+idna=3.11=py310h06a4308_0
+importlib-metadata=8.7.0=py310h06a4308_0
+intel-gmmlib=22.9.0=hb700be7_0
+intel-media-driver=25.3.4=hecca717_0
+intel-openmp=2021.4.0=h06a4308_3561
+jinja2=3.1.6=py310h06a4308_0
+joblib=1.5.3=py310h06a4308_0
+jpeg=9e=h5eee18b_3
+kaldi=5.5.985=h11a70cb_0
+keyutils=1.6.3=hb9d3cd8_0
+kiwisolver=1.4.9=py310haaf941d_2
+krb5=1.21.3=h723845a_4
+lame=3.100=h7b6447c_0
+lcms2=2.16=h92b89f2_1
+ld_impl_linux-64=2.45.1=default_hbd61a6d_101
+lerc=4.0.0=h6a678d5_0
+level-zero=1.28.0=hb700be7_0
+libabseil=20250127.0=cxx17_h6a678d5_0
+libavif16=1.3.0=h316e467_3
+libblas=3.9.0=12_linux64_mkl
+libbrotlicommon=1.0.9=h5eee18b_9
+libbrotlidec=1.0.9=h5eee18b_9
+libbrotlienc=1.0.9=h5eee18b_9
+libcap=2.77=h3ff7636_0
+libcblas=3.9.0=12_linux64_mkl
+libclang13=20.1.8=default_hee3e7a4_0
+libcups=2.4.2=h252cb56_2
+libcurl=8.15.0=hc1efc7f_0
+libde265=1.0.15=h00ab1b0_0
+libdeflate=1.22=h5eee18b_0
+libdrm=2.4.125=hb03c661_1
+libedit=3.1.20250104=pl5321h7949ede_0
+libegl=1.7.0=h5eee18b_2
+libev=4.33=h7f8727e_1
+libevent=2.1.12=hdbd6064_1
+libffi=3.4.4=h6a678d5_1
+libflac=1.5.0=he200343_1
+libfreetype=2.14.1=ha770c72_0
+libfreetype6=2.14.1=h73754d4_0
+libgcc=15.2.0=he0feb66_17
+libgcc-ng=15.2.0=h69a702a_17
+libgfortran-ng=11.2.0=h00389a5_1
+libgfortran5=11.2.0=h1234567_1
+libgl=1.7.0=h5eee18b_2
+libglib=2.84.2=h37c7471_0
+libglvnd=1.7.0=h5eee18b_2
+libglx=1.7.0=h5eee18b_2
+libgpuarray=0.7.6=h7f8727e_1
+libgrpc=1.71.0=h2d74bed_0
+libheif=1.19.7=gpl_hc18d805_100
+libhwloc=2.12.1=default_hf1bbc79_1000
+libhwy=1.0.7=h00ab1b0_0
+libiconv=1.18=h3b78370_2
+libjxl=0.8.2=h5b01ea3_0
+libkrb5=1.21.3=h520c7b4_4
+liblapack=3.9.0=12_linux64_mkl
+liblapacke=3.9.0=12_linux64_mkl
+libllvm20=20.1.8=h465586c_0
+libnghttp2=1.57.0=h2d74bed_0
+libnsl=2.0.1=hb9d3cd8_1
+libntlm=1.8=hb9d3cd8_0
+libogg=1.3.5=h27cfd23_1
+libopengl=1.7.0=h5eee18b_2
+libopenvino=2025.0.0=hdc3f47d_3
+libopenvino-auto-batch-plugin=2025.0.0=h4d9b6c2_3
+libopenvino-auto-plugin=2025.0.0=h4d9b6c2_3
+libopenvino-hetero-plugin=2025.0.0=h981d57b_3
+libopenvino-intel-cpu-plugin=2025.0.0=hdc3f47d_3
+libopenvino-intel-gpu-plugin=2025.0.0=hdc3f47d_3
+libopenvino-intel-npu-plugin=2025.0.0=hdc3f47d_3
+libopenvino-ir-frontend=2025.0.0=h981d57b_3
+libopenvino-onnx-frontend=2025.0.0=h0e684df_3
+libopenvino-paddle-frontend=2025.0.0=h0e684df_3
+libopenvino-pytorch-frontend=2025.0.0=h5888daf_3
+libopenvino-tensorflow-frontend=2025.0.0=h684f15b_3
+libopenvino-tensorflow-lite-frontend=2025.0.0=h5888daf_3
+libopus=1.6.1=h280c20c_0
+libpciaccess=0.18=h5eee18b_0
+libpng=1.6.55=h421ea60_0
+libpq=17.4=h02b6914_2
+libprotobuf=5.29.3=h3cdef7c_1
+libre2-11=2024.07.02=h6a678d5_0
+librsvg=2.56.3=hb0330b6_2
+libsndfile=1.2.2=hc7d488a_2
+libsodium=1.0.20=heac8642_0
+libsqlite=3.51.2=h0c1763c_0
+libssh2=1.11.1=h251f7ec_0
+libstdcxx=15.2.0=h934c35e_17
+libstdcxx-ng=15.2.0=hdf11a46_17
+libsystemd0=257.10=hd0affe5_4
+libthrift=0.15.0=h5e7f578_3
+libtiff=4.7.0=hde9077f_0
+libudev1=257.10=hd0affe5_4
+libunwind=1.8.3=h65a8314_0
+liburing=2.14=hb700be7_0
+libusb=1.0.29=h73b1eb8_0
+libuuid=1.41.5=h5eee18b_0
+libuv=1.51.0=hb03c661_1
+libva=2.23.0=he1eb515_0
+libvorbis=1.3.7=h7b6447c_0
+libvpl=2.15.0=h54a6638_1
+libvpx=1.7.0=h439df22_0
+libvulkan-loader=1.4.341.0=h5279c79_0
+libwebp-base=1.6.0=hd42ef1d_0
+libxcb=1.17.0=h9b100fa_0
+libxcrypt=4.4.36=hd590300_1
+libxkbcommon=1.9.1=h69220b7_0
+libxml2=2.13.8=hfdd30dd_0
+libxslt=1.1.41=h097e994_0
+libzlib=1.3.1=hb25bd0a_0
+llvm-openmp=14.0.6=h9e868ea_0
+llvmlite=0.46.0=py310hee1c697_0
+lmdb=0.9.31=hb25bd0a_0
+lxml=5.3.0=py310h57af460_1
+lz4-c=1.9.4=h6a678d5_1
+mako=1.3.10=py310h06a4308_0
+markupsafe=3.0.3=py310h3406613_0
+matplotlib-base=3.10.8=py310hfde16b3_0
+mkl=2021.4.0=h06a4308_640
+mkl-service=2.4.0=py310h7f8727e_0
+mpc=1.3.1=h5eee18b_0
+mpfr=4.2.1=h5eee18b_0
+mpg123=1.32.9=hc50e24c_0
+mpmath=1.3.0=py310h06a4308_0
+multidict=6.7.1=pypi_0
+munkres=1.1.4=py_0
+narwhals=2.16.0=pyhcf101f3_0
+ncurses=6.5=h7934f7d_0
+networkx=3.4.2=py310h06a4308_0
+ninja=1.12.1=h06a4308_0
+ninja-base=1.12.1=hdb19cb5_0
+numba=0.63.1=py310h225f558_0
+numpy=1.26.4=py310hb13e2d6_0
+ocl-icd=2.3.3=hb9d3cd8_0
+opencl-headers=2025.07.22=hfb20e49_0
+openfst=1.8.4=h84d6215_1
+openh264=2.6.0=he621ea3_0
+openjpeg=2.5.2=h0d4d230_1
+openldap=2.6.4=h42fbc30_0
+openssl=3.6.1=h35e630c_1
+optree=0.18.0=py310h03d9f68_0
+orc=2.1.1=hd396ef6_0
+packaging=26.0=pyhcf101f3_0
+pandas=2.3.3=py310h0158d43_2
+pango=1.50.7=h668f713_2
+patsy=1.0.2=py310h06a4308_0
+pcre2=10.42=hebb0a14_1
+pillow=11.1.0=py310hac6e08b_1
+pip=26.0.1=pyhc872135_0
+pixman=0.46.4=h7934f7d_0
+platformdirs=4.5.0=py310h06a4308_0
+plotly=6.5.2=pyhd8ed1ab_0
+pooch=1.8.2=py310h06a4308_0
+propcache=0.4.1=pypi_0
+psutil=7.2.2=pypi_0
+pthread-stubs=0.4=hb9d3cd8_1002
+pugixml=1.15=h3f63f65_0
+pyarrow=19.0.0=py310h7934f7d_2
+pybind11=3.0.1=pyh7a1b43c_0
+pybind11-abi=11=hc364b38_1
+pybind11-global=3.0.1=pyhc7ab6ef_0
+pycparser=2.23=py310h06a4308_0
+pygpu=0.7.6=py310h9102076_0
+pynndescent=0.5.13=py310h06a4308_0
+pyparsing=3.3.2=pyhcf101f3_0
+pysocks=1.7.1=py310h06a4308_1
+python=3.10.19=h6fa692b_0
+python-dateutil=2.9.0post0=py310h06a4308_2
+python-gil=3.10.19=hd8ed1ab_3
+python-tzdata=2025.3=pyhd3eb1b0_0
+python-whois=0.9.6=pypi_0
+python_abi=3.10=3_cp310
+pytorch=2.4.1=py3.10_cpu_0
+pytorch-mutex=1.0=cpu
+pytz=2025.2=py310h06a4308_0
+pyyaml=6.0.3=py310h3406613_1
+qhull=2020.2=hdb19cb5_2
+rav1e=0.7.1=h8fae777_3
+re2=2024.07.02=hdb19cb5_0
+readline=8.3=hc2a1206_0
+regex=2026.1.15=py310h7c4b9e2_0
+requests=2.32.5=py310h06a4308_1
+s2n=1.5.14=hdbd6064_0
+safetensors=0.7.0=py310hdfeec95_0
+scikit-learn=1.7.2=py310h228f341_0
+scipy=1.10.1=py310hd5efca6_0
+sdl2=2.0.22=h27087fc_1
+seaborn=0.13.2=py310h06a4308_3
+seaborn-base=0.13.2=pyhd8ed1ab_3
+sentence-transformers=5.2.2=pyhd8ed1ab_0
+setuptools=82.0.0=pyh332efcf_0
+shaderc=2025.5=h718be3e_1
+six=1.17.0=py310h06a4308_0
+sleef=3.9.0=ha0421bc_0
+snappy=1.2.2=h03e3b7b_1
+soupsieve=2.8.3=pyhd8ed1ab_0
+spirv-tools=2026.1=hb700be7_0
+sqlite=3.50.2=hb25bd0a_1
+statsmodels=0.14.6=py310hf779ad0_0
+svt-av1=4.0.0=hecca717_0
+sympy=1.14.0=py310h06a4308_1
+tbb=2022.0.0=hdb19cb5_0
+threadpoolctl=3.6.0=pyhecae5ae_0
+tk=8.6.15=h54e0aa7_0
+tokenizers=0.22.2=py310h4551fc8_0
+torch-geometric=2.7.0=pypi_0
+torchaudio=2.4.1=py310_cpu
+torchvision=0.15.2=cuda118py310h196c800_0
+tornado=6.5.3=py310h7c4b9e2_0
+tqdm=4.67.3=py310h7040dfc_0
+transformers=4.57.6=pyhd8ed1ab_1
+typing-extensions=4.15.0=py310h06a4308_0
+typing_extensions=4.15.0=py310h06a4308_0
+tzdata=2025c=he532380_0
+umap-learn=0.5.11=py310h06a4308_0
+unicodedata2=17.0.0=py310h7c4b9e2_1
+urllib3=2.5.0=py310h06a4308_0
+utf8proc=2.6.1=h5eee18b_1
+wayland=1.24.0=hdac8c69_0
+wayland-protocols=1.47=h51f6af0_0
+wheel=0.46.3=py310h06a4308_0
+x264=1!164.3095=h166bdaf_2
+x265=3.5=h924138e_3
+xcb-util=0.4.1=h5eee18b_2
+xcb-util-cursor=0.1.6=hb03c661_0
+xcb-util-image=0.4.0=h5eee18b_2
+xcb-util-keysyms=0.4.1=h5eee18b_0
+xcb-util-renderutil=0.3.10=h5eee18b_0
+xcb-util-wm=0.4.2=h5eee18b_0
+xkeyboard-config=2.46=hb03c661_0
+xorg-libice=1.1.2=h9b100fa_0
+xorg-libsm=1.2.6=h9b100fa_0
+xorg-libx11=1.8.12=h9b100fa_1
+xorg-libxau=1.0.12=h9b100fa_0
+xorg-libxcomposite=0.4.7=hb03c661_0
+xorg-libxcursor=1.2.3=h9b100fa_0
+xorg-libxdamage=1.1.6=h9b100fa_0
+xorg-libxdmcp=1.1.5=h9b100fa_0
+xorg-libxext=1.3.7=hb03c661_0
+xorg-libxfixes=6.0.2=hb03c661_0
+xorg-libxi=1.8.2=h9b100fa_0
+xorg-libxrandr=1.5.5=hb03c661_0
+xorg-libxrender=0.9.12=h9b100fa_0
+xorg-libxscrnsaver=1.2.4=h9b100fa_0
+xorg-libxtst=1.2.5=h9b100fa_3
+xorg-libxxf86vm=1.1.7=hb03c661_0
+xorg-xorgproto=2024.1=h5eee18b_1
+xxhash=3.6.0=pypi_0
+xz=5.6.4=h5eee18b_1
+yaml=0.2.5=h7b6447c_0
+yarl=1.22.0=pypi_0
+zipp=3.23.0=py310h06a4308_0
+zlib=1.3.1=hb25bd0a_0
+zlib-ng=2.3.3=hceb46e0_1
+zstd=1.5.7=hb78ec9c_6
